# insERT

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
code/include/App/: App.h
code/include/AppUser/: AppUser.h
code/include/BusinessObject/: BusinessObject.h  IBusinessObject.h
code/include/BusinessOperations/: BusinessOperations.h
code/include/Database/: Database.h  IDatabase.h
code/include/Document/: Document.h
code/include/Operations/: BusinessOperations.h  IBusinessOperations.h  ISystemOperations.h  SystemOperations.h
code/include/Product/: Product.h
code/include/common/: ConsoleLogger.h  FileLogger.h  ILogger.h  Logger.h  common.h
code/src/: CMakeLists.txt  main.cpp
code/src/App/: App.cpp  CMakeLists.txt
code/src/AppUser/: AppUser.cpp  CMakeLists.txt
code/src/BusinessObject/: BusinessObject.cpp  CMakeLists.txt
code/src/BusinessOperations/: BusinessOperations.cpp  CMakeLists.txt
code/src/Database/: CMakeLists.txt  Database.cpp
code/src/Document/: CMakeLists.txt  Document.cpp
code/src/Operations/: BusinessOperations.cpp  CMakeLists.txt  SystemOperations.cpp
code/src/Product/: CMakeLists.txt  Product.cpp
tests/: CMakeLists.txt  test_all.cpp  test_app.cpp  test_appuser.cpp  test_businessoperations.cpp  test_database.cpp  test_document.cpp  test_product.cpp  test_systemoperations.cpp
tests/mocks/: MockDatabase.h
